# vmaf-rs

./: .gitignore  .gitmodules  Cargo.toml
examples/: bootstrapped.rs  check_file.rs  gst_simple.rs  search_suitable_encoder.rs  simple.rs  streaming.rs
misc/: make_videos.sh  make_y4m.sh
src/: gst.rs  lib.rs  libvmaf.rs  y4m.rs
videos/: short_high_quality.y4m  short_low_quality.y4m  short_original.y4m
