[package]
name = "vmaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
libc = "0.2.149"
os_str_bytes = "6.5.1"
y4m = "0.8.0"

libvmaf-sys = { path = "./libvmaf-sys", features = [] }

glib = { version = "0.18.2", optional = true }
gstreamer = { version = "0.21.1", optional = true }
gstreamer-video = { version = "0.21.1", optional = true }
gstreamer-app = { version = "0.21.1", optional = true }
lazy_static = "1.4.0"

[features]
default = ["gst"]
gst = ["glib", "gstreamer", "gstreamer-video", "gstreamer-app"]
float = ["libvmaf-sys/float"]
avx512 = ["libvmaf-sys/avx512"]

[dev-dependencies]
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.10.1"
indicatif = "0.17.7"
log = "0.4.20"
num_cpus = "1.16.0"
path_to_unicode_filename = "0.1.1"
rand = "0.8.5"
statrs = "0.16.0"
tinytemplate = "1.2.1"

